tests/baselines/reference/objectFreeze.errors.txt
tests/cases/compiler/objectFreeze.ts(5,1): error TS2542: Index signature in type 'ReadonlyArray<number>' only permits reading.
tests/cases/compiler/objectFreeze.ts(8,3): error TS2540: Cannot assign to 'b' because it is a constant or a read-only property.


==== tests/cases/compiler/objectFreeze.ts (2 errors) ====
    const f = Object.freeze(function foo(a: number, b: string) { return false; });
    f(1, "") === false;
    
    const a = Object.freeze([1, 2, 3]);
    a[0] = 1;
    ~~~~
!!! error TS2542: Index signature in type 'ReadonlyArray<number>' only permits reading.
    
    const o = Object.freeze({ a: 1, b: "string" });
    o.b = "another";
      ~
!!! error TS2540: Cannot assign to 'b' because it is a constant or a read-only property.
    